WIP merge with Front-end-opponent

--- a/uno/public/stylesheets/chooseColor.css
+++ b/uno/public/stylesheets/chooseColor.css
@@ -6,7 +6,8 @@
   position:relative;
   box-sizing:border-box;
   -webkit-font-smoothing: subpixel-antialiased !important; 
-  -webkit-backface-visibility: hidden; 
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 body, html {
   height:100%;
@@ -161,9 +162,3 @@ a.modal-open {
     border-radius: 15px;
     box-shadow: 9px 9px #999;
 }
-
-
-
-
-
-
