Fix hand border scale

--- a/uno/views/game_screen.pug
+++ b/uno/views/game_screen.pug
@@ -23,13 +23,13 @@ script(src='/socket.io/socket.io.js')
     #myHand.hand
     .leftOpponentContainer
         #leftOpponentName.opponentName
-        #leftOpponent.hand
+        #leftOpponent
     .topOpponentContainer
         #topOpponentName.opponentName
-        #topOpponent.hand
+        #topOpponent
     .rightOpponentContainer
         #rightOpponentName.opponentName
-        #rightOpponent.hand
+        #rightOpponent
     .wildcardButtonContainer
     .container-chat
         .accordion-content
