--- a/uno/public/stylesheets/game.css
+++ b/uno/public/stylesheets/game.css
@@ -437,7 +437,7 @@ body {
 #leftOpponent,
 #rightOpponent {
     display: flex;
-    /* overflow: hidden; */
+    overflow: hidden;
     flex-direction: column;
     justify-content: center;
     border-radius: 1rem;
@@ -492,7 +492,7 @@ body {
 #myHandBorder {
     display: flex;
     overflow: hidden;
-    /* border: .2rem solid yellow; */
+    border: .2rem solid yellow;
     border-radius: 1rem;
     border-bottom-left-radius: 0%;
     border-bottom-right-radius: 0%;
