--- a/uno/views/game_screen.pug
+++ b/uno/views/game_screen.pug
@@ -52,4 +52,31 @@ script(src='/socket.io/socket.io.js')
                 button#bluebttn.choosebttn BLUE
                 button#yellowbttn.choosebttn YELLOW
                 button#greenbttn.choosebttn GREEN
+
+    a.winner-open(href='#winner')
+    #winner.winner
+        .winner-content
+            a.winner-close(href='#w' title='Close Winner') X
+            h1 GAME OVER
+            .winner-area 
+                img(src='/assets/winnerSmiley.png')
+                br
+                | Congratulations!
+                br
+                | YOU WIN
+                br
+                button.lobby-button Return to Lobby              
+    a.loser-open(href='#loser')
+    #loser.loser
+        .loser-content
+            a.loser-close(href='#l' title='Close Loser') X
+            h1 GAME OVER
+            .loser-area 
+                img(src='/assets/loserSmiley.png')
+                br
+                | Oh no!
+                br
+                | YOU LOST
+                br
+                button.lobby-button Return to Lobby
     
