Add font for end screen, added assets

--- a/uno/public/stylesheets/chooseColor.css
+++ b/uno/public/stylesheets/chooseColor.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Cantarell:400,400italic,700italic,700);
 @import url(//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 * {
   padding:0;
   margin:0;
