--- a/uno/public/stylesheets/style.css
+++ b/uno/public/stylesheets/style.css
@@ -261,7 +261,7 @@ form {
 }
 
 #registrationForm{
-  background-image: url('/assets/wild_DraW.png');
+  background-image: url('/assets/Wild_Draw.png');
 }
 
 .formHeaderContainer {
