--- a/uno/public/stylesheets/game.css
+++ b/uno/public/stylesheets/game.css
@@ -155,6 +155,13 @@ table {
     --leftOpponentBorder: hidden;
     --topOpponentBorder: hidden;
     --rightOpponentBorder: hidden;
+    --leftOpponentOverlap: -20px;
+    --topOpponentOverlap: -20px;
+    --rightOpponentOverlap: -20px;
+    --myHandOverlap: -20px;
+    /* --opponentContainerSize: 120;
+    --myContainerSize: 250;
+    --cardSize: 109; */
 }
 
 html {
@@ -397,6 +404,7 @@ body {
 }
 
 .topOpponentContainer {
+    display: flex;
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
@@ -437,57 +445,55 @@ body {
 #leftOpponent,
 #rightOpponent {
     display: flex;
-    overflow: hidden;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     border-radius: 1rem;
     width: 21vh;
 }
 
 #leftOpponent {
-    clip-path: polygon(3% 0, 100% 0, 100% 100%, 3% 100%);
-    transform: translateX(-2%);
-    border: .2rem solid yellow;
     left: -3%;
-    border-top-left-radius: 0%;
-    border-bottom-left-radius: 0%;
 }
 
 #topOpponent {
-    clip-path: polygon(0 3%, 100% 3%, 100% 100%, 0 100%);
-    transform: translateY(-3%);
-    overflow: hidden;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    border: .2rem solid yellow;
-    border-top: 0px;
-    border-radius: 1rem;
-    border-top-left-radius: 0%;
-    border-top-right-radius: 0%;
     height: 21vh;
+    width: 100%;
     top: 0px;
 }
 
 #rightOpponent {
-    clip-path: polygon(0 0, 97% 0, 97% 100%, 0 100%);
-    border: .2rem solid yellow;
+    max-height: 100%;
     right: -3%;
-    border-top-right-radius: 0%;
-    border-bottom-right-radius: 0%;
 }
 
 #myHand {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     z-index: 1;
-    width: 50%;
-    left: 50%;
-    margin-left: -25%;
-    height: 22vh;
-    bottom: 0px;
-    transform: translateY(5%);
+    height: 21vh;
 }
+
+#myHandContainer {
+    display: flex;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    bottom: 0px;
+    height: 21vh;
+    width: 50vh;
+}
+
+
+/**
+* BORDER ELEMENTS
+*/
 
 #myHandBorder {
     display: flex;
@@ -506,13 +512,57 @@ body {
     transform: translateY(5%);
 }
 
-/**
-* BORDER ELEMENTS
-*/
+#leftOpponentBorder,
+#rightOpponentBorder {
+    display: flex;
+    position: fixed;
+    top: 50vh;
+    margin-top: -30vh;
+    height: 60vh;
+    width: 21vh;
+}
 
-#rightOpponent::before,
-#leftOpponent::before,
-#topOpponent::before,
+#leftOpponentBorder{
+    clip-path: polygon(3% 0, 100% 0, 100% 100%, 3% 100%);
+    transform: translateX(-2%);
+    border-radius: 10px;
+    border-top-left-radius: 0%;
+    border-bottom-left-radius: 0%;
+    left: 0px;
+}
+#rightOpponentBorder{
+    clip-path: polygon(0 0, 97% 0, 97% 100%, 0 100%);
+    border-top-right-radius: 0%;
+    border-bottom-right-radius: 0%;
+    right: 0px;
+}
+#topOpponentBorder{
+    position: fixed;
+    clip-path: polygon(0 3%, 100% 3%, 100% 100%, 0 100%);
+    border-top: 0px;
+    border-radius: 1rem;
+    border-top-left-radius: 0%;
+    border-top-right-radius: 0%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60vh;
+    height: 23.5vh;
+    top: -15px;
+}
+
+#leftOpponentBorder,
+#rightOpponentBorder,
+#topOpponentBorder{
+    display: flex;
+    overflow: hidden;
+    border-radius: 1rem;
+    border: .2rem solid yellow;
+
+}
+
+#rightOpponentBorder::before,
+#leftOpponentBorder::before,
+#topOpponentBorder::before,
 #myHandBorder::before {
     content: "";
     position: absolute;
@@ -525,7 +575,7 @@ body {
     animation: rotate 4s linear infinite;
 }
 
-#topOpponent::before,
+#topOpponentBorder::before,
 #myHandBorder::before {
     left: -50%;
     top: -450%;
@@ -533,17 +583,17 @@ body {
     height: 1000%;
 }
 
-#leftOpponent::before,
-#rightOpponent::before {
+#leftOpponentBorder::before,
+#rightOpponentBorder::before {
     left: -450%;
     top: -50%;
     width: 1000%;
     height: 200%;
 }
 
-#rightOpponent::after,
-#leftOpponent::after,
-#topOpponent::after {
+#rightOpponentBorder::after,
+#leftOpponentBorder::after,
+#topOpponentBorder::after {
     content: '';
     position: absolute;
     z-index: -1;
@@ -567,30 +617,30 @@ body {
 
 }
 
-#leftOpponent::before {
+#leftOpponentBorder::before {
     visibility: var(--leftOpponentBorder);
 }
-#rightOpponent::before {
+#rightOpponentBorder::before {
     visibility: var(--rightOpponentBorder);
 }
-#topOpponent::before {
+#topOpponentBorder::before {
     visibility: var(--topOpponentBorder);
 }
 
 #myHandBorder::before {
     visibility: var(--myHandBorder);
 }
-#rightOpponent::after {
+#rightOpponentBorder::after {
     visibility: var(--rightOpponentBorder);
     background: radial-gradient(ellipse at right, #2d4a34, #213626);
 }
 
-#leftOpponent::after {
+#leftOpponentBorder::after {
     visibility: var(--leftOpponentBorder);
     background: radial-gradient(ellipse at left, #2d4a34, #213626);
 }
 
-#topOpponent::after {
+#topOpponentBorder::after {
     visibility: var(--topOpponentBorder);
     background: radial-gradient(ellipse at bottom, #406a4b, #2f4e37);
 }
@@ -613,10 +663,8 @@ body {
 
 
 .card {
-    display: inline-block;
     background-repeat: no-repeat;
     background-size: contain;
-    /* padding: 2rem; */
     max-width: 388px;
     max-height: 563px;
     width: 12.93vh;
@@ -624,9 +672,17 @@ body {
     border-radius: .5rem;
     box-shadow: 4px 4px 12px 2px rgba(0, 0, 0, 0.60);
     transition: 0.2s;
+    margin: 0;
+}
+
+.card img{
+    vertical-align: top;
+    width: 100%; 
+    opacity: 0;  
 }
 
 .deckCard {
+    background-image: url('/assets/Deck.png');
     min-width: 100%;
     z-index: 2;
     box-shadow: 2px 4px 8px 1px rgba(0, 0, 0, 0.20);
@@ -645,28 +701,33 @@ body {
 .addCard {
     margin-top: 200px;
 }
-
-
-.deckCard,
-.rightOpponentCard,
-.leftOpponentCard,
-.topOpponentCard {
-    background-image: url('/assets/Deck.png');
+.leftOpponentImg,
+.rightOpponentImg{
+    content: url('/assets/InvisibleSide.png');
+}
+.topOpponentImg{
+    content: url('/assets/Invisible.png');
 }
 
 .leftOpponentCard {
-    margin-left: 4.5vh;
-    transform: rotate(90deg);
+    background-image: url('/assets/leftOpponent.png');
+    max-height: 388px;
+    max-width: 563px;
+    height: 12.93vh;
+    width: 18.73vh;
 }
 
 .topOpponentCard {
+    background-image: url('/assets/topOpponent.png');
     margin-top: 5px;
-    transform: rotate(180deg);
 }
 
 .rightOpponentCard {
-    margin-left: 4vh;
-    transform: rotate(270deg);
+    background-image: url('/assets/rightOpponent.png');
+    max-height: 388px;
+    max-width: 563px;
+    height: 12.93vh;
+    width: 18.73vh;
 }
 
 .myCard {
@@ -674,7 +735,7 @@ body {
 }
 
 .myCard:not(:first-child) {
-    margin-left: calc(var(--numCards)*-.5vh);
+    margin-left: var(--myHandOverlap);
 }
 
 .myCard:hover,
@@ -702,17 +763,21 @@ body {
     filter: brightness(85%);
 }
 
+
 .rightOpponentCard:not(:first-child) {
-    margin-top: calc((var(--rightOpponentCards)*-10px) + -5vh);
+    
+    margin-top: var(--rightOpponentOverlap);
 }
 
+
 .leftOpponentCard:not(:first-child) {
-    margin-top: calc((var(--leftOpponentCards)*-10px) + -5vh);
+    margin-top: var(--leftOpponentOverlap);
 }
 
 .topOpponentCard:not(:last-child) {
-    margin-right: calc(var(--topOpponentCards)*-1vh);
+    margin-right: var(--topOpponentOverlap);
 }
+
 
 /* CHAT */
 
