Color indicator, event card notif, fix lobby bttn

--- a/uno/views/game_screen.pug
+++ b/uno/views/game_screen.pug
@@ -7,6 +7,7 @@ head
     title Home
 script(src='/socket.io/socket.io.js')
 .gameScreenContainer
+    .colorContainer
     #discard.discard
         a Discard Pile
         .card.discardCard
@@ -30,6 +31,7 @@ script(src='/socket.io/socket.io.js')
         #rightOpponentName.opponentName
         #rightOpponent
     .wildcardButtonContainer
+    .alertContainer
     .container-chat
         .accordion-content
             .chat-field
