--- a/uno/public/stylesheets/lobby.css
+++ b/uno/public/stylesheets/lobby.css
@@ -60,7 +60,6 @@ table {
 
 body {
     height: 100vh;
-    width: 100vw;
     font-family: "Bree Serif", sans-serif;
     background-image: url('../assets/UnoBackground1.png');
     background-repeat: no-repeat;
@@ -73,6 +72,7 @@ body {
 .game_window{
     height: 75vh;
     width: 75vw;
+    max-width: 1726px;
     background-image: url('../assets/wooden_background.jpg');
     border-style: solid;
     border-width: 5px;
@@ -80,6 +80,7 @@ body {
     border-radius: 20px;
     box-shadow: 5px 5px 7px #323232;
     display:flex;
+    margin: auto;
     /* justify-content: left; */
     /* uno/public/assets/wooden_background.jpg */
     
@@ -97,7 +98,7 @@ body {
 }
 
 .bot-left-side {
-    width: 450px;
+    width: 350px;
     display: flex;
     align-items: flex-end;
     order: 1;
@@ -113,6 +114,7 @@ body {
 button.accordion {
     font-family: 'Nunito Sans', sans-serif;
     width: 90%;
+    max-width: 300px;
     background-color: #c9c9c9;
     border-top: 2px solid #151515;
     border-right: 2px solid #151515;
@@ -150,6 +152,7 @@ button.accordion:hover, button.accordion.is-open {
     font-family: 'DM Sans', sans-serif;
     font-size: 20px;
     width: 90%;
+    max-width: 300px;
     background-color: white;
     border-left: 1px solid whitesmoke;
     border-right: 1px solid #151515;
@@ -228,6 +231,7 @@ button.accordion:hover, button.accordion.is-open {
     overflow-y: auto;
     background-color: white;
     flex-direction: column;
+    
 }
 
 
@@ -244,15 +248,18 @@ button.accordion:hover, button.accordion.is-open {
     background-color: whitesmoke;
     box-shadow: 3px 3px 5px #323232;
     border-radius: 3px 3px 3px 3px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
 
 }
 
 .game-card-id {
     padding: 10px;
-    width: 40%;
+    width: 80%;
     top: 30%;
     right: 10%;
-    /* background-color: red; */
+    
 }
 
 /* END GAME CARDS */
@@ -271,9 +278,11 @@ button.accordion:hover, button.accordion.is-open {
 
 .new-game-button {
     font-family: 'Nunito Sans', sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     height: 50px;
-    width: 60%;
+    width: 70%;
+    max-width: 350px;
+    right:50px;
     position:relative;
     top: 65%;
     border-color: #151515;
@@ -301,15 +310,17 @@ button.accordion:hover, button.accordion.is-open {
     font-family: 'Nunito Sans', sans-serif;
     font-size: 15px;
     height: 30px;
-    width: 30%;
-    position:relative;
-    top: -5%;
-    left: 63%;
+    width: 150px;
     border-color: #151515;
     border-width: 3px;
     border-radius: 5px;
     background-color: #f7e754;
     box-shadow: 3px 3px 5px #323232;
+    margin-top: 5%;
+    margin-right: 3%;
+    
+    
+    
 }
 
 .join-game:hover {
@@ -330,8 +341,10 @@ button.accordion:hover, button.accordion.is-open {
     font-size: 20px;
     height: 50px;
     width: 60%;
+    max-width: 350px;
     position:relative;
     top: 110%;
+    right: 35px;
     border-color: #151515;
     border-width: 3px;
     border-radius: 5px;
