draw two/four, skip, and reverse animations; plus some other minor visual changes

--- a/uno/views/game_screen.pug
+++ b/uno/views/game_screen.pug
@@ -34,6 +34,14 @@ script(src='/socket.io/socket.io.js')
         #rightOpponentName.opponentName
         #rightOpponent
     .wildcardButtonContainer
+    #reverseContainer
+        #reverse
+    #skipContainer
+        #skip
+    #plusTwoContainer
+        #plusTwo
+    #plusFourContainer
+        #plusFour
     .container-chat
         .accordion-content
             .chat-field
