base functionality for uno and you didn't say uno frontend

--- a/uno/views/game_screen.pug
+++ b/uno/views/game_screen.pug
@@ -16,9 +16,9 @@ script(src='/socket.io/socket.io.js')
         button.start-game START GAME
         .deckContainer
     .unoButtonContainer
-        button.unoButton(type="button") Uno!
+        button#unoButton(type="button") Uno!
     .youDidNotSayUnoButtonContainer
-        button.youDidNotSayUnoButton(type="button") You didn't say Uno!
+        button#youDidNotSayUnoButton(type="button") You didn't say Uno!
     #myHandBorder.hand
     #myHandContainer
         #myHand.hand
