--- a/uno/public/stylesheets/game.css
+++ b/uno/public/stylesheets/game.css
@@ -230,24 +230,27 @@ body {
 
 .unoButtonContainer {
     visibility: hidden;
+    opacity: 1;
     position: absolute;
     cursor: pointer;
     border-radius: 100px;
     background-color: rgba(10, 10, 10, .7);
-    transition: 200ms ease-in;
+    transition: 200ms ease-in, opacity 200ms ease-in-out;
     top: 65%;
     right: 46%;
     display: flex;
     justify-content: center;
     align-content: center;
     flex-direction: column;
+    box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.60);
 }
 
 .unoButtonContainer:hover {
     transform: rotate(-10deg) scale(0.9);
+    filter: brightness(70%);
 }
 
-.unoButton {
+#unoButton {
     z-index: 1;
     display: block;
     cursor: pointer;
@@ -256,17 +259,76 @@ body {
     text-align: center;
     text-decoration: none;
     font-family: Lobster;
+    padding: .4rem;
     font-size: 4rem;
-    top: 65%;
-    right: 46%;
     background-image: linear-gradient(to left, blue, green, yellow, orange, red);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     filter: drop-shadow(2px 2px #333);
 }
 
-.unoButton:hover {
+.youDidNotSayUnoButtonContainer {
+    visibility: hidden;
+    position: absolute;
+    cursor: pointer;
+    border-radius: 100px;
+    background-image: linear-gradient(to left, rgba(255, 255, 255, 0.7), rgba(128, 128, 128, 0.7));
+    box-shadow: 4px 4px 12px 2px rgba(0, 0, 0, 0.60);
+    transition: 200ms ease-in;
+    top: 65%;
+    left: 40%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+
+}
+
+#youDidNotSayUnoButton {
+    z-index: 1;
+    display: block;
+    cursor: pointer;
+    border-color: transparent;
+    backface-visibility: hidden;
+    text-align: center;
+    text-decoration: none;
+    font-family: Lobster;
+    font-size: 3rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    background-image: linear-gradient(to left, black, white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    filter: drop-shadow(2px 2px #333);
+}
+
+.youDidNotSayUnoButtonContainer:hover {
+    animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
     filter: brightness(70%);
+}
+
+@keyframes shake {
+
+    10%,
+    90% {
+        transform: translate3d(-1px, 0, 0);
+    }
+
+    20%,
+    80% {
+        transform: translate3d(2px, 0, 0);
+    }
+
+    30%,
+    50%,
+    70% {
+        transform: translate3d(-4px, 0, 0);
+    }
+
+    40%,
+    60% {
+        transform: translate3d(4px, 0, 0);
+    }
 }
 
 /* FOR CHOSEN WILDCARD BUTTON TESTING */
@@ -306,72 +368,6 @@ body {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     filter: drop-shadow(2px 2px #333);
-}
-
-.unoButton:hover {
-    filter: brightness(70%);
-}
-
-.youDidNotSayUnoButtonContainer {
-    visibility: hidden;
-    position: absolute;
-    cursor: pointer;
-    border-radius: 100px;
-    background-image: linear-gradient(to left, rgba(255, 255, 255, 0.7), rgba(128, 128, 128, 0.7));
-    box-shadow: 4px 4px 12px 2px rgba(0, 0, 0, 0.60);
-    transition: 200ms ease-in;
-    top: 65%;
-    left: 40%;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
-
-}
-
-.youDidNotSayUnoButton {
-    z-index: 1;
-    display: block;
-    cursor: pointer;
-    border-color: transparent;
-    backface-visibility: hidden;
-    text-align: center;
-    text-decoration: none;
-    font-family: Lobster;
-    font-size: 3rem;
-    background-image: linear-gradient(to left, black, white);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    filter: drop-shadow(2px 2px #333);
-}
-
-.youDidNotSayUnoButtonContainer:hover {
-    animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
-    filter: brightness(70%);
-}
-
-@keyframes shake {
-
-    10%,
-    90% {
-        transform: translate3d(-1px, 0, 0);
-    }
-
-    20%,
-    80% {
-        transform: translate3d(2px, 0, 0);
-    }
-
-    30%,
-    50%,
-    70% {
-        transform: translate3d(-4px, 0, 0);
-    }
-
-    40%,
-    60% {
-        transform: translate3d(4px, 0, 0);
-    }
 }
 
 .opponentName {
