--- a/uno/public/stylesheets/style.css
+++ b/uno/public/stylesheets/style.css
@@ -249,6 +249,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   align-content: space-around;
   gap: 20px;
   border-radius: 9%;
@@ -267,9 +268,8 @@ form {
 .formHeaderContainer {
   align-self: center;
   height: min(10vh, 70px);
-  line-height: min(10vh, 70px);
+  line-height: min(8vh, 70px);
   width: 70%;
-  margin-top: 8vh;
 }
 
 #lHeader {
@@ -296,7 +296,6 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  align-content: space-around;
 }
 
 input[type=text],
@@ -305,6 +304,7 @@ input[type=password] {
   padding: 12px 20px;
   margin: 8px 0;
   border-radius: 10px;
+  border: 0.2vw solid #162b3d;
   display: inline-block;
   box-sizing: border-box;
 }
@@ -315,15 +315,16 @@ input[type=password] {
   border-radius: 50%;
   max-width: 60px;
   max-height: 60px;
-  width: 3.5vw;
-  height: 3.5vw;
+  width: 6vh;
+  height: 6vh;
   line-height: 0.1vw;
-  border: 0.12vw solid black;
+  border: 0.3vw solid #162b3d;
   background-color: #ffffff;
   font-family: "Fira Sans Condensed", serif;
-  color: #274b69;
+  color: #162b3d;
   font-size: min(6vh, 60px);
-  top: 10%;
+  font-weight: 800;
+  top: 1vh;
   justify-content: center;
 }
 
@@ -334,7 +335,7 @@ input[type=password] {
 
 .createAccount {
   width: 42%;
-  margin-top: min(8vh, 70px);
+  margin-top: 70px;
   margin-right: 4px;
   text-decoration: none;
   text-align: center;
@@ -347,3 +348,9 @@ input[type=password] {
 .createAccount:hover {
   color: white;
 }
+
+.regInput{
+  position: relative;
+  top: -5%;
+}
+
