visual fixes for some scaling issues

--- a/uno/views/game_screen.pug
+++ b/uno/views/game_screen.pug
@@ -24,14 +24,17 @@ script(src='/socket.io/socket.io.js')
         #myHand.hand
     #leftOpponentBorder
     .leftOpponentContainer
+        #leftOpponentUnoSymbol Uno!
         #leftOpponentName.opponentName
         #leftOpponent
     #topOpponentBorder
     .topOpponentContainer
+        #topOpponentUnoSymbol Uno!
         #topOpponentName.opponentName
         #topOpponent
     #rightOpponentBorder
     .rightOpponentContainer
+        #rightOpponentUnoSymbol Uno!
         #rightOpponentName.opponentName
         #rightOpponent
     .wildcardButtonContainer
