--- a/uno/views/registration.pug
+++ b/uno/views/registration.pug
@@ -14,7 +14,7 @@ head
       #registrationHeaderContainer.formHeaderContainer
         #lHeader
           b Register
-      #inputContainer
+      #inputContainer.regInput
         input(type='text' placeholder='Enter Email' required='terms' name='email' id='email')
         input(type='text' placeholder='Enter Username' required='terms' name='uname' id='username')
 
